--- a/style.css
+++ b/style.css
@@ -100,3 +100,14 @@ nav a {
     width: 350px;
     text-align: left;
 }
+
+#contact {
+    background-color: #e9ecef;
+    padding: 30px 0;
+    text-align: left;
+}
+
+#contact .container {
+    max-width: 700px;
+    margin: 0 auto;
+}
